# DArray_Optimizer

./: CMakeLists.txt  README.md
include/: blas_like.h  cblas_like.h  darray.h  darray_cuda.cu  dbarrier.cu  dbarrier.h  dkernel.cu  dkernel.h  dkernel_cuda.cu  lapack_like.h  read_input.h  utils.h
perftests/: perftest_cholesky.cpp  perftest_lu.cpp
tests/: README.md  a.out  check_lu.jl  job.sh  test1.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp  test6.cpp  test7.cpp  test_barrier.cpp  test_cuda.cu  test_lra.cpp  testsvm.cpp  testsvm_mpi.cpp  testsvm_tensor.cpp
